tests/golden/type_errors/generic_method_uninferred_type_parameter.cd
struct Box { value: number }
impl Box {
  fun make<T>(): T? { return nil; }
}
let box: Box = Box { value: 0 };
box.make();
