tests/golden/type_errors/generic_method_uninferred_type_parameter.err
Type error at 6:10: cannot infer type parameter T
  box.make();
           ^
